--- a/frontend/src/css/Orders.css
+++ b/frontend/src/css/Orders.css
@@ -4,76 +4,84 @@
   font-family: "Nunito", sans-serif;
 }
 
-.orderbody .bodyy{
+.orderbody .bodyy {
   background: #48b0df;
   padding: 0.1px;
   height: max-content;
   min-height: 95vh
-  
 }
-.OCards hr{
+
+.OCards hr {
   width: 92%;
   border: 1.5px solid rgb(230, 230, 230);
- 
+
 }
 
-#mainhe{
+#mainhe {
   width: 95%;
-  border: 2px solid #48b0df;;
+  border: 2px solid #48b0df;
+  ;
 }
 
-.orderspage{
-    width: 82vw;
-    margin-left: auto;
-    margin-right: 2vw;
-    background: white;
-    padding: 0.1px;
-    margin-top: 2rem;
-    border-radius: 0.9rem;
-    margin-bottom: 2rem;
+.orderspage {
+  width: 82vw;
+  margin-left: auto;
+  margin-right: 2vw;
+  background: white;
+  padding: 0.1px;
+  margin-top: 2rem;
+  border-radius: 0.9rem;
+  margin-bottom: 2rem;
 }
-.orderspage h1{
-    font-size: 1.7rem;
-    text-align: left;
-    color: #48b0df;
-    margin-top: 1rem;
-    margin-left: 2rem;
+
+.orderspage h1 {
+  font-size: 1.7rem;
+  text-align: left;
+  color: #48b0df;
+  margin-top: 1rem;
+  margin-left: 2rem;
 }
-.orderspage .filterOptions{
-    display: flex;
-    justify-content: space-between;
-    padding: 0.1px;
-    margin-bottom: 1rem;
+
+.orderspage .filterOptions {
+  display: flex;
+  justify-content: space-between;
+  padding: 0.1px;
+  margin-bottom: 1rem;
 }
-.orderspage .filterOptions .search-filter{
-    width: 75%;
-    margin-left: 2rem;
-    background: #ddf4ff;
-    border-radius: 0.9rem;
-    height: 3rem;
-    margin-top: 0;
-    margin-bottom: 0;
+
+.orderspage .filterOptions .search-filter {
+  width: 75%;
+  margin-left: 2rem;
+  background: #ddf4ff;
+  border-radius: 0.9rem;
+  height: 3rem;
+  margin-top: 0;
+  margin-bottom: 0;
 }
-.orderspage .filterOptions .search-filter:focus{
-    margin-top: 0;
-    margin-bottom: 0;
+
+.orderspage .filterOptions .search-filter:focus {
+  margin-top: 0;
+  margin-bottom: 0;
 }
-.orderspage .filterOptions .filter-select{
-    width: 15%;
-    margin-right: 5rem;
-    
-}
-.orderspage .sada{
-    background: rgb(248, 248, 248);
-    min-height: 3rem;
-    border-radius: 0.9rem;
-    margin-bottom: 1rem;
-    width: 20vw;
-    margin: auto;
-    display: flex;
-    justify-content: space-evenly;
+
+.orderspage .filterOptions .filter-select {
+  width: 15%;
+  margin-right: 5rem;
 
 }
+
+.orderspage .sada {
+  background: rgb(248, 248, 248);
+  min-height: 3rem;
+  border-radius: 0.9rem;
+  margin-bottom: 1rem;
+  width: 20vw;
+  margin: auto;
+  display: flex;
+  justify-content: space-evenly;
+
+}
+
 /* .donate {
   background-repeat: no-repeat;
   margin-left: 0%;
@@ -134,35 +142,39 @@
   cursor: pointer;
 } */
 
-.Card_body{
+.Card_body {
   border-radius: 20px;
 }
+
 .allCards {
-  
+
   width: 100%;
   margin: auto;
   height: max-content;
   position: relative;
   padding: 1px;
-  
+
 }
+
 .OCards {
   font-size: 1rem;
   position: relative;
   width: 100%;
   margin: auto;
   height: max-content;
-  margin-top:2rem;
+  margin-top: 2rem;
 
 }
-
-.OCards .button-53{
+ .medsidspan{
+  display: none;
+ }
+.OCards .button-53 {
   background-color: #b7ffe7;
   border: 0 solid #E5E7EB;
   box-sizing: border-box;
   color: #000000;
   display: flex;
-  font-family: ui-sans-serif,system-ui,-apple-system,system-ui,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+  font-family: ui-sans-serif, system-ui, -apple-system, system-ui, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 1rem;
   font-weight: 700;
   justify-content: center;
@@ -179,66 +191,65 @@
   touch-action: manipulation;
   text-align: center;
   margin: auto;
-  
-  
+
+
 }
 
 
 .OCards .card {
- 
+
   max-width: 100%;
   width: 99%;
   margin: auto;
   border: none;
- 
-  
+
+
 }
 
-.OCards .card-body{
+.OCards .card-body {
   width: 100%;
   outline: none;
   border: none;
   display: flex;
   padding: 0.1px;
-  
-  
-}
-.OCards .card-body:hover {
 
- 
-  
+
 }
+
+.OCards .card-body:hover {}
+
 .OCards .card-body:hover {
   width: 100%;
-  
+
 }
 
-.OCards .card-text{
+.OCards .card-text {
   width: 90vw;
   outline: none;
   border: none;
   display: flex;
   justify-content: flex-start;
-  
+
 }
 
-.OCards p{  
+.OCards p {
   width: 11vw;
   padding: 1rem;
   text-align: center;
   line-height: 4rem;
   margin: 0;
-} 
+  word-break: break-all;
+  white-space: normal;
+  line-height: 1.2rem;
+}
 
-.OCards .content-details{
+.OCards .content-details {
   display: none;
 }
 
-.headd{
-  
-}
+.headd {}
 
-.heading{
+.heading {
   height: max-content;
   width: 99%;
   font-size: 1.3rem;
@@ -250,32 +261,35 @@
   justify-content: flex-start;
   color: rgb(0, 0, 0);
 }
-.heading img{
+
+.heading img {
   padding-left: 1rem;
   float: left;
   margin-top: auto;
   width: 2rem;
-  
+
 }
-#action{
+
+#action {
   width: 11vw;
 }
 
-#title{
- 
+#title {
+
   font-weight: 700;
 
-} 
-
-#title img{
-  width: 1.5rem;
-  float:left;
 }
-#mobpill{
+
+#title img {
+  width: 1.5rem;
+  float: left;
+}
+
+#mobpill {
   display: none;
 }
 
-#req_button{
+#req_button {
   background-image: linear-gradient(-180deg, rgb(4, 230, 0) 0%, #01a42ac1 100%);
   border-radius: 1rem;
   color: #FFFFFF;
@@ -289,7 +303,7 @@
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
-  
+
 }
 
 #req_button:hover {
@@ -302,35 +316,97 @@
   justify-content: center;
   align-items: center;
 }
-.loada{
+
+.loada {
   color: black;
- position: relative;
- top: 50%;
+  position: relative;
+  top: 50%;
 
 }
 
 
-@media screen and (max-width: 1000px){
-  .OCards .card {
-    margin-top: 1rem;
-    max-width: 100%;
+@media screen and (max-width: 1000px) {
+  .orderbody .bodyy {
+    background: #48b0df;
+    padding: 0.1px;
+    height: max-content;
+    min-height: 95vh;
     width: 100%;
+  }
+
+  .orderspage {
+    width: 95%;
+    margin-left: auto;
+    margin-right: 0vw;
+    background: white;
+    margin: auto;
+    padding: 0.1px;
+    margin-top: 2rem;
+    border-radius: 0.9rem;
+    margin-bottom: 2rem;
+  }
+
+  .orderspage .filterOptions {
+    display: flex;
+    justify-content: space-between;
+    padding: 0.1px;
+    margin-bottom: 1rem;
+  }
+
+  .orderspage .filterOptions .search-filter {
+    width: 75%;
+    margin-left: 1rem;
+    background: #ddf4ff;
+    border-radius: 0.9rem;
+    height: 3rem;
+    padding-left: 1rem;
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+
+  .orderspage .filterOptions .filter-select {
+    width: 25%;
+    margin-right: 1rem;
+    margin-left: 1rem;
+  }
+
+  .orderspage .sada {
+    background: rgb(248, 248, 248);
+    min-height: 3rem;
+    border-radius: 0.9rem;
+    margin-bottom: 1rem;
+    width: 80vw;
+    margin: auto;
+    display: flex;
+    justify-content: space-evenly;
+  }
+
+  .OCards .card {
+    margin-top: 2rem;
+    max-width: 100%;
+    width: 95%;
     border: none;
     background: white;
     border-radius: 1rem;
     box-shadow: 1px 1px 8px #bebebe;
     text-align: center;
+    padding-bottom: 2rem;
   }
-  .OCards .card-body{
+  #sacjgnasd{ 
+    display: none;
+  }
+
+  .OCards .card-body {
     margin: auto;
     width: 100%;
     outline: none;
     border: none;
     display: block;
-  
-    
+
+
   }
-  .OCards .card-text{
+
+  .OCards .card-text {
     margin: auto;
     text-align: center;
     width: 90%;
@@ -338,82 +414,116 @@
     border: none;
     display: block;
     justify-content: flex-start;
-    
+
   }
-  .OCards p{  
+
+  .OCards p {
     width: 100%;
-    display: flex;
-  } 
-  .OCards .content-details{
+    
+    padding: 0;
+    font-size: 1.5rem;
+    display: inline-block;
+    text-align: left;
+    word-break: break-all;
+    white-space: normal;
+    line-height: 4rem;
+  }
+
+  .OCards .content-details {
     display: block;
     margin-right: 0.5rem;
   }
 
-  
-#title{
-  
-  font-size: 1.1rem;
-  margin: 1rem;
-  border-radius: 1rem;
-  height: 2.5rem;
-  padding-top: 1rem;
-  width: 80%;
-}
 
-.heading{
-  box-shadow: 2px 2px 8px #cfcfcf;
-  height: 7rem;
-  width: 85vw;
-  
-  font-weight: 600;
-  outline: none;
-  border: none;
-  display: flex;
-  justify-content: flex-start;
-  background: white;
-  border-radius: 1rem;
-}
-.heading img{
-  
-  margin: auto;
-  width: 5rem;
-}
-.heading .headp{
-  display: none;
-}
-#mobpill{
-  display: block;
-}
-.OCards .button-53{
-  background-color: #b7ffe7;
-  border: 0 solid #E5E7EB;
-  box-sizing: border-box;
-  color: #000000;
-  display: flex;
-  font-family: ui-sans-serif,system-ui,-apple-system,system-ui,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
-  font-size: 1rem;
-  font-weight: 700;
-  justify-content: center;
-  line-height: 1.75rem;
-  padding: .75rem 1.65rem;
-  position: relative;
-  text-align: center;
-  text-decoration: none #000000 solid;
-  text-decoration-thickness: auto;
-  width: 100%;
-  max-width: 70%;
-  position: relative;
-  cursor: pointer;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  text-align: center;
-  margin: auto;
-  margin-top: 2rem;
-  
+  #title {
 
-  
-}
+    font-size: 1.1rem;
+    margin: 0rem;
+    border-radius: 1rem;
+    height: 2.5rem;
+    padding-top: 1rem;
+    width: 80%;
+  }
+
+  .heading {
+    box-shadow: 2px 2px 8px #cfcfcf;
+    height: 7rem;
+    width: 85vw;
+
+    font-weight: 600;
+    outline: none;
+    border: none;
+    display: flex;
+    justify-content: flex-start;
+    background: white;
+    border-radius: 1rem;
+    display: none;
+  }
+  #mainhe{
+    display: none;
+  }
+  .heading img {
+
+    margin: auto;
+    width: 5rem;
+  }
+
+  .heading .headp {
+    display: none;
+  }
+
+  #mobpill {
+    display: block;
+  }
+
+  .OCards .button-53 {
+    background-color: #b7ffe7;
+    border: 0 solid #E5E7EB;
+    box-sizing: border-box;
+    color: #000000;
+    display: flex;
+    font-family: ui-sans-serif, system-ui, -apple-system, system-ui, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    font-size: 1rem;
+    font-weight: 700;
+    justify-content: center;
+    line-height: 1.75rem;
+    padding: .75rem 1.65rem;
+    position: relative;
+    text-align: center;
+    text-decoration: none #000000 solid;
+    text-decoration-thickness: auto;
+    width: 30%;
+    max-width: 70%;
+    position: relative;
+    cursor: pointer;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    text-align: center;
+    margin: auto;
+    margin-top: 2rem;
+    margin: 0;
+    display: inline-block;
+
+
+  }
+  .medsidspan{
+    display: inline-block;
+    width: 35%;
+    text-align: left;
+    margin-left: 2rem;
+    font-weight: 700;
+  }
+  .medishaelong{
+    display: inline-block;
+    width: 50%;
+    margin-left: 40%;
+
+  }
+  #locatasacas{
+      position: absolute;
+
+  }
 }
 
 /* CSS for the modal container */
