--- a/frontend/src/css/Tasks.css
+++ b/frontend/src/css/Tasks.css
@@ -419,6 +419,13 @@
     #adfasda{
         display: inline-block;
         width: 50%;
+        margin-left: 38%;
+    }
+    
+    
+    #fbuybcsa{
+        position: absolute;
+        
     }
     #nmsadaca{
         display: none;
