only show vol when not verified , donate buttons

--- a/frontend/src/css/Communitychat.css
+++ b/frontend/src/css/Communitychat.css
@@ -13,7 +13,8 @@
 .comsssc{
     width: 100vw;
     background: rgb(236, 249, 255);
-    height: 60rem;
+    height: 93vh;
+    
     overflow: hidden;
     padding: 0.1px;
 }
