--- a/frontend/src/css/Profile.css
+++ b/frontend/src/css/Profile.css
@@ -438,9 +438,10 @@
   background: white;
   border: none;
   height: 2.5rem;
-  border-radius: 0.5rem;
+  border-radius: 1rem;
   margin-left: 1rem;
-  padding-top: 1rem;
+  padding-top: 0.2rem;
+  width: 7rem;
 
 }
 
