--- a/frontend/src/css/Donate.css
+++ b/frontend/src/css/Donate.css
@@ -57,13 +57,14 @@
   right: 0;
 }
 .donate {
-  height: 38rem;
+  height:max-content;
   margin: auto;
   display: flex;
   justify-content: center;
   border-radius: 0.9rem;
   background: #C6E6FB;
   margin-bottom: 1rem;
+  padding-bottom: 2rem;
 }
 
 .donateForm select {
@@ -95,7 +96,7 @@
   padding: 30px;
  
   width: 25vw;
-  height: 30rem;
+  height: 33rem;
   position: relative;
   border-radius: 0.9rem;
   min-width: 22rem;
@@ -143,7 +144,7 @@
   text-align: center;
   text-decoration: none #000000 solid;
   text-decoration-thickness: auto;
-  width: 60%;
+  width: 50%;
   max-width: 460px;
   position: relative;
   cursor: pointer;
@@ -155,7 +156,7 @@
   margin-top: 2rem;
 }
 .button-53:hover {
-  width: 65%;
+  width: 51%;
 }
 
 .button-53:focus {
@@ -194,8 +195,9 @@
   border-radius: 0.9rem;
   color: white;
   margin-left: 1rem;
-  height: 34rem;
+  height: 37rem;
   width: 15rem;
+
   background: #48b0df;
   margin-top: 2rem;
 }
@@ -285,8 +287,32 @@ input {
 }
 
 .leftrightfunc{
-  height: 1rem;
+  height: 2rem;
   padding-top: 1rem;
+
+  margin: auto;
+}
+.leftrightfunc button{
+    border: none;
+    height: 3rem;
+    border-radius: 0.5rem;
+    width: 3rem;
+
+}
+.leftrightfunc button:hover{
+    background: rgb(210, 210, 210);
+}
+.leftrightfunc #asdscae{
+  margin-left: 1rem;
+  margin-right: 1rem;
+  height: 3rem;
+  background: #48b0df;
+  color: white;
+  width: 6rem;
+
+}
+.leftrightfunc #asdscae:hover{
+   width: 6.3rem;
 }
 
 @media screen and (max-width: 1000px) {
