--- a/frontend/src/css/PersonalChat.css
+++ b/frontend/src/css/PersonalChat.css
@@ -2,6 +2,8 @@
 *::-webkit-scrollbar {
     width: 5px;
  }
+
+
  *::-webkit-scrollbar-track {
     background: #f1f1f1;
  }
@@ -10,17 +12,22 @@
  }
  *::-webkit-scrollbar-thumb:hover {
     background: #a5a5a5;
+   
 }
 
 * {
+    
   font-family: "Nunito", sans-serif;
 }
 .perschat{
     width: 100vw;
-    height: 91.3vh;
+    height: 93vh;
     background: rgb(227, 247, 255);
     padding: 0.1px;
+    overflow-y: hidden;
+
 }
+
 .chatcont{
     background: rgb(252, 252, 252);
     
@@ -327,4 +334,14 @@ filter: invert(100%) sepia(100%) saturate(1%) hue-rotate(211deg) brightness(104%
         padding-left: 1rem;
         font-size: 1.5rem;
     }
+    .perschat{
+        width: 100vw;
+        height: 93vh;
+        background: rgb(227, 247, 255);
+        padding: 0.1px;
+        overflow-y: hidden;
+     
+    
+    }
+    
 }
