--- a/frontend/src/css/Home.css
+++ b/frontend/src/css/Home.css
@@ -1,4 +1,3 @@
-
 .homeeee .Lcontent .banner1 {
   display: flex;
   justify-content: space-around;
@@ -6,21 +5,23 @@
   width: 80vw;
   margin-left: auto;
   margin-right: 2vw;
-  
+
 }
-.homeeee .Lcontent .banner1 .img{
+
+.homeeee .Lcontent .banner1 .img {
   width: 100vw;
   height: max-content;
   margin-top: 4rem;
 }
-.images{
-  padding-top:5%;
+
+.images {
+  padding-top: 5%;
   width: 60%;
   height: 45rem;
   margin-left: 10%;
 }
 
-.image{
+.image {
   box-shadow: 2px 2px 9px rgb(223, 223, 223);
   margin-top: 2rem;
   display: flex;
@@ -30,26 +31,26 @@
   padding-left: 10%;
 }
 
-.image:hover{
+.image:hover {
   box-shadow: 2px 2px 9px rgb(171, 171, 171);
-  
+
 }
 
 
-.image img{
-   padding-top: 0.5rem;
-   height: 12rem;
-   border-radius: 2rem;
-   margin-left: 5rem;
+.image img {
+  padding-top: 0.5rem;
+  height: 12rem;
+  border-radius: 2rem;
+  margin-left: 5rem;
 }
 
-.image h1{
+.image h1 {
   font-size: 3.5rem;
   padding-top: 2rem;
   margin-left: 5rem;
 }
 
-.image h2{
+.image h2 {
   font-size: 3.5rem;
   padding-top: 2rem;
   margin-left: 13rem;
@@ -67,7 +68,7 @@
   display: flex;
 }
 
-.card-header > h5 {
+.card-header>h5 {
   margin: 0;
   padding: 11px;
 }
@@ -115,6 +116,7 @@
   color: red;
   font-variation-settings: "FILL" 1, "wght" 700, "GRAD" 0, "opsz" 48;
 }
+
 .material-symbols-outlined {
   cursor: pointer;
 }
@@ -155,16 +157,19 @@
   display: flex;
   flex-direction: column;
 }
-.homeeee .Lcontent .banner1 .img #wacdase img{
+
+.homeeee .Lcontent .banner1 .img #wacdase img {
   margin-top: 1rem;
   width: 42rem;
   transform: rotate(90deg);
   position: relative;
   z-index: 2;
 }
-.homeeee .Lcontent .banner1 .img .curve2 img{
-    margin-top: -6rem;
+
+.homeeee .Lcontent .banner1 .img .curve2 img {
+  margin-top: -6rem;
 }
+
 .comment-section {
   flex-grow: 4;
   text-align: left;
@@ -185,7 +190,7 @@
   font-variation-settings: "FILL" 0, "wght" 700, "GRAD" 0, "opsz" 48;
 }
 
-.footerr{
+.footerr {
   background: rgb(225, 242, 255);
   position: relative;
   left: 0;
@@ -193,73 +198,88 @@
   width: 100vw;
   color: white;
   text-align: center;
- height: 4rem;
+  height: 4rem;
 }
-.homeeee .fbac{
+
+.homeeee .fbac {
   background-color: white;
 }
-.footerr a{
+
+.footerr a {
   color: black;
   text-decoration: none;
   margin-left: 2rem;
 
 }
-.footerr a:hover{
+
+.footerr a:hover {
   font-size: 1rem;
   box-shadow: none;
 }
 
-.homeeee .fbac-slidetrack .bord{
+.homeeee .fbac-slidetrack .bord {
   box-shadow: 2px 2px 9px rgb(234, 234, 234);
- background: rgb(255, 255, 255);;
+  background: rgb(255, 255, 255);
+  ;
 }
 
-.subscri{
+.subscri {
   background: rgb(227, 248, 255);
   width: 100vw;
-  height: 100vh;;
+  height: 100vh;
+  ;
   padding: 0.1px;
-  
+
 }
 
-.subsss .subs{
+.subsss .subs {
   width: 74vw;
   margin-left: auto;
   margin-right: 2vw;
   padding: 5rem;
   margin-top: 5rem;
-  
+
 }
 
-#orangec{
+#orangec {
   margin-top: 0.5rem;
   margin-bottom: 3rem;
   color: rgb(255, 102, 0);
 }
-.subsss .subs img{
-    height: 15rem;
+
+.subsss .subs img {
+  height: 15rem;
 }
 
 
 @media screen and (max-width: 1000px) {
+  .homeeee .Lcontent .banner1 .img #wacdase img {
+    margin-top: 0;
+    width: 100%;
+    transform: rotate(0);
+    position: relative;
+    z-index: 2;
 
-  .subsss .subs img{
+  }
+
+  .subsss .subs img {
     height: 10rem;
-}
+  }
 
-  .subsss .subs{
+  .subsss .subs {
     padding: 0;
   }
-  .images{
-    
-    padding-top:5%;
+
+  .images {
+
+    padding-top: 5%;
     width: 60%;
     height: 45rem;
     margin-left: 10%;
   }
-  
-  .image{
-   
+
+  .image {
+
     box-shadow: 2px 2px 9px rgb(223, 223, 223);
     margin-top: 2rem;
     display: flex;
@@ -268,32 +288,32 @@
     height: 13rem;
     padding-left: 10%;
   }
-  
-  .image:hover{
+
+  .image:hover {
     box-shadow: 2px 2px 9px rgb(171, 171, 171);
-    
+
   }
-  
-  
-  .image img{
-     padding-top: 0.5rem;
-     height: 12rem;
-     border-radius: 2rem;
-     margin-left: 5rem;
+
+
+  .image img {
+    padding-top: 0.5rem;
+    height: 12rem;
+    border-radius: 2rem;
+    margin-left: 5rem;
   }
-  
-  .image h1{
+
+  .image h1 {
     font-size: 3.5rem;
     padding-top: 2rem;
     margin-left: 5rem;
   }
-  
-  .image h2{
+
+  .image h2 {
     font-size: 3.5rem;
     padding-top: 2rem;
     margin-left: 13rem;
   }
-  
+
   .card {
     max-width: 500px;
     height: max-content;
@@ -301,16 +321,16 @@
     border: 1px solid rgb(173, 173, 173);
     border-radius: 5px;
   }
-  
+
   .card-header {
     display: flex;
   }
-  
-  .card-header > h5 {
+
+  .card-header>h5 {
     margin: 0;
     padding: 11px;
   }
-  
+
   .card-pic img {
     width: 30px;
     border-radius: 30px;
@@ -318,30 +338,30 @@
     object-fit: contain;
     padding: 5px;
   }
-  
+
   .card-image img {
     width: 100%;
   }
-  
+
   .card-content {
     text-align: left;
     line-height: 4px;
     padding: 3px 10px;
     border-bottom: 1px solid rgb(173, 173, 173);
   }
-  
+
   .add-comment {
     display: flex;
     align-items: center;
   }
-  
+
   .add-comment input {
     margin: 0;
     outline: none;
     border: none;
     padding: 10px;
   }
-  
+
   .comment {
     border: none;
     background-color: none;
@@ -349,15 +369,16 @@
     cursor: pointer;
     color: #339ce3;
   }
-  
+
   .material-symbols-outlined-red {
     color: red;
     font-variation-settings: "FILL" 1, "wght" 700, "GRAD" 0, "opsz" 48;
   }
+
   .material-symbols-outlined {
     cursor: pointer;
   }
-  
+
   .showComment {
     width: 100vw;
     min-height: 100vh;
@@ -366,7 +387,7 @@
     left: 0;
     background-color: rgba(16, 13, 13, 0.4);
   }
-  
+
   .container {
     display: flex;
     width: 80%;
@@ -376,31 +397,31 @@
     left: 10%;
     height: 500px;
   }
-  
+
   .postPic {
     background-color: black;
     display: flex;
     align-items: center;
   }
-  
+
   .postPic img {
     object-fit: contain;
     width: 100%;
   }
-  
+
   .details {
     width: 100%;
     height: inherit;
     display: flex;
     flex-direction: column;
   }
-  
+
   .comment-section {
     flex-grow: 4;
     text-align: left;
     margin-left: 10px;
   }
-  
+
   .close-comment {
     position: fixed;
     top: 1%;
@@ -409,11 +430,12 @@
     border: none;
     cursor: pointer;
   }
-  
+
   .material-symbols-outlined-comment {
     font-size: 50px;
     font-variation-settings: "FILL" 0, "wght" 700, "GRAD" 0, "opsz" 48;
   }
+
   .homeeee .Lcontent .banner1 {
     display: block;
     justify-content: space-around;
@@ -421,5 +443,5 @@
     width: 100%;
     margin-left: auto;
     margin-right: 0vw;
-}
+  }
 }
