--- a/frontend/src/css/Communitychat.css
+++ b/frontend/src/css/Communitychat.css
@@ -112,6 +112,24 @@
  .chatbot-container{
     display: none;
  }
+ #daicina{
+    opacity: 0;
+    animation: helloanim;
+    animation-duration: 2s;
+    animation-delay: 2s;
+    animation-fill-mode: forwards;
+
+ }
+
+ @keyframes helloanim {
+    0% {
+        opacity: 1;
+      
+    }
+    100% {
+        opacity: 1;
+    }    
+ }
  @media screen and (max-width: 1000px){
     .commchat{
         position: relative;
